[gd_scene load_steps=5 format=3 uid="uid://cvv8knlqearhw"]

[ext_resource type="Script" uid="uid://waq1fj63asf5" path="res://scenes/pause_menu/pause_menu.gd" id="1_5bgjm"]
[ext_resource type="Theme" uid="uid://d3m46y6fmbccy" path="res://resources/theme_base.tres" id="1_qcmsd"]
[ext_resource type="LabelSettings" uid="uid://cm32281ckbiq1" path="res://resources/label_settings_heading.tres" id="3_10tpt"]
[ext_resource type="Script" uid="uid://ke8vda81p2fg" path="res://utils/sfx_manager.gd" id="4_0a7io"]

[node name="PauseMenu" type="Panel"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qcmsd")
script = ExtResource("1_5bgjm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(5.583167e-06, 0.8510427, 0.85449153, 1)
theme_override_font_sizes/font_size = 16
text = "Paused"
label_settings = ExtResource("3_10tpt")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resume"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Main menu"

[node name="SFX" type="AudioStreamPlayer" parent="."]
script = ExtResource("4_0a7io")

[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/ResumeButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ResumeButton" to="." method="_on_resume"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit"]
